istio/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-https-service-entry
  namespace: default
spec:
  hosts:
  - www.google.com
  - www.google.be
  - mail.google.com
  addresses:
  - 0.0.0.0/0
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: NONE
  location: MESH_EXTERNAL
